Switch UI from vanilla ts to Angular